--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,10 @@ project.ext.react = [
     entryFile: "index.js"
 ]
 
+project.ext.react = [
+  cliPath: "node_modules/haul/bin/cli.js"
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
@@ -137,9 +141,6 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-svg')
-    compile project(':react-native-svg')
-    compile project(':react-native-svg')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
