--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev":
-      "kyt dev & haul start --platform ios & react-native run-ios --simulator \"iPad Air\"",
     "dev-server": "kyt dev",
-    "dev-ios": "haul start --platform ios",
+    "dev-haul": "haul start --platform ios",
+    "dev-ios": "react-native run-ios --simulator \"iPad Air\"",
     "test": "jest",
     "haul": "haul",
     "storybook":
