--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev":
-      "kyt dev & haul start --platform ios & react-native run-ios --simulator \"iPad Air\"",
+    "dev": "kyt dev & haul start --platform ios & react-native run-ios --simulator \"iPad Air\"",
     "dev-server": "kyt dev",
-    "dev-ios": "haul start --platform ios",
+    "dev-haul": "haul start --platform ios",
+    "dev-ios": "react-native run-ios --no-packager --simulator \"iPad Air\"",
     "test": "jest",
     "haul": "haul",
-    "storybook":
-      "storybook start -p 7007 --haul webpack.haul.storybook.js --platform ios"
+    "storybook": "storybook start -p 7007 --haul webpack.haul.storybook.js --platform ios"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -42,7 +41,6 @@
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.14",
     "@storybook/addon-links": "^3.3.14",
-    "@storybook/addons": "^3.3.14",
     "@storybook/react-native": "^3.3.14",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -76,6 +74,8 @@
     ]
   },
   "rnpm": {
-    "assets": ["./assets/fonts/"]
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
