--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "castScannerTimeout": 10,
   "castPlayTimeout": 30,
-  "mediaBaseUrl": "http://localhost:3000/media/"
+  "mediaBaseUrl": "http://192.168.101.55:3000/media/"
 }
