--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "react/no-array-index-key": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/media-has-caption": "off",
+    "jsx-a11y/anchor-is-valid": "off",
     "prettier/prettier": [
       "error",
       {
