--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-blur')
     compile project(':react-native-svg')
     compile project(':react-native-blur')
     compile fileTree(dir: "libs", include: ["*.jar"])
