fix PropTransition bugs

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "4.15.3",
     "global": "^4.3.2",
     "kyt": "^0.9.0",
+    "lodash": "^4.17.5",
     "mdns": "^2.3.4",
     "react": "^16.3.0-alpha.1",
     "react-dom": "^16.2.0",
