--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "chromecast-scanner": "^0.5.0",
     "compression": "1.6.2",
     "cors": "^2.8.4",
+    "electron": "^1.7.11",
     "express": "4.15.3",
     "global": "^4.3.2",
+    "keymaster": "^1.6.2",
     "kyt": "^0.9.0",
     "mdns": "^2.3.4",
     "react": "^16.3.0-alpha.1",
@@ -49,6 +51,7 @@
     "enzyme": "^3.3.0",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "16.1.0",
+    "eslint-config-airbnb-es5": "^1.2.0",
     "eslint-config-kyt": "^0.5.0",
     "eslint-config-prettier": "2.6.0",
     "eslint-plugin-import": "2.8.0",
