--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev-haul": "haul start --platform ios",
     "dev-ios": "react-native run-ios --simulator \"iPad Air\"",
     "test": "jest",
+    "test-watch": "jest --watch",
     "haul": "haul",
     "storybook": "storybook start -p 7007 --haul webpack.haul.storybook.js --platform ios"
   },
