--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "scripts": {
     "dev-server": "kyt dev",
+    "dev-server-player": "kyt build && node build/server/main.js startScenes",
     "dev-haul": "haul start --platform ios",
     "dev-ios": "react-native run-ios --simulator \"iPad Air\"",
     "test": "jest",
     "test-watch": "jest --watch",
     "haul": "haul",
-    "storybook":
-      "storybook start -p 7007 --haul webpack.haul.storybook.js --platform ios",
+    "storybook": "storybook start -p 7007 --haul webpack.haul.storybook.js --platform ios",
     "build-lib": "babel src/lib --out-dir build/lib --presets=es2015,stage-3",
-    "build-scripts":
-      "npm run build-lib && babel src/scripts --out-dir build/scripts --presets=es2015,stage-3",
+    "build-scripts": "npm run build-lib && babel src/scripts --out-dir build/scripts --presets=es2015,stage-3",
     "scan": "npm run build-scripts && babel-node build/scripts/scan.js",
     "play": "npm run build-scripts && babel-node build/scripts/play.js",
     "time": "npm run build-scripts && babel-node build/scripts/time.js"
@@ -35,6 +34,7 @@
     "react-dom": "^16.2.0",
     "react-native": "0.54.0",
     "react-native-blur": "^3.2.2",
+    "react-native-network-info": "^3.1.0",
     "react-native-svg": "^6.2.2",
     "react-native-svg-loader": "^0.1.3",
     "react-redux": "^5.0.7",
@@ -84,6 +84,8 @@
     ]
   },
   "rnpm": {
-    "assets": ["./assets/fonts/"]
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
