client interaction timer; refactor scene change throttle

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "haul": "haul",
+    "haul-bundle": "haul bundle --platform ios --bundle-output ios/build/main.jsbundle --assets-dest build",
     "storybook": "storybook start -p 7007 --haul webpack.haul.storybook.js --platform ios",
     "build-lib": "babel src/lib --out-dir build/lib --presets=es2015,stage-3",
     "build-scripts": "npm run build-lib && babel src/scripts --out-dir build/scripts --presets=es2015,stage-3",
@@ -44,6 +45,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-socket.io": "^1.4.0",
+    "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
@@ -67,7 +69,7 @@
     "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "7.4.0",
     "eslint-plugin-react-native": "^3.2.1",
-    "haul": "^1.0.0-beta.13",
+    "haul": "git://github.com/pzhine/haul.git#v1.0.0-beta.13.script-fix",
     "jest": "22.4.0",
     "jest-serializer-enzyme": "^1.0.0",
     "prettier": "^1.11.1",
