--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "pm2": "kyt build && pm2 start pm2.config.js",
     "dev-server": "kyt dev",
     "dev-server-player": "kyt build && node build/server/main.js startScenes",
     "dev-haul": "haul start --platform ios",
